# piccione

./: .gitignore  LICENSE  contributors.md  piccione.cabal
src/: ArgumentsParserUtils.hs  Command.hs  CommandRegistry.hs  ConnectionContext.hs  ConnectionState.hs  Logger.hs  MailCommandMonad.hs  Main.hs  MessageReader.hs  RawCommandParser.hs  ServerLogic.hs  ServerState.hs  Tls.hs
src/Commands/: AnyState.hs  AuthenticatedState.hs  NotAuthenticatedState.hs  SelectedState.hs
