name:                piccione
version:             0.1.0.0
synopsis:            IMAP server
description:         Quasi-conforming IMAP server implemented in Haskell
license:             BSD3
license-file:        LICENSE
author:              Haskell Ita
maintainer:          franciman12@gmail.com
copyright:           © 2018 Haskell Ita
category:            Application Server
build-type:          Simple
extra-source-files:  stack.yaml, contributors.md
cabal-version:       >=1.10

executable piccione
  main-is:             Main.hs
  other-modules:       RawCommandParser,
                       Command,
                       ServerState,
                       CommandRegistry,
                       Logger,
                       MailCommandMonad,
                       ArgumentsParserUtils,
                       Tls,
                       ServerLogic,
                       MessageReader,
                       ConnectionContext,
                       Commands.AnyState,
                       Commands.NotAuthenticatedState,
                       Commands.AuthenticatedState,
                       Commands.SelectedState
  build-depends:       base,
                       bytestring,
                       containers,
                       megaparsec,
                       text,
                       mtl,
                       network,
                       tls,
                       data-default,
                       optparse-applicative

  hs-source-dirs:      src
  default-language:    Haskell2010
